--- a/.github/workflows/docker-build-publish.yaml
+++ b/.github/workflows/docker-build-publish.yaml
@@ -6,28 +6,53 @@ on:
       - 'main'
 
 jobs:
-  docker:
+  build:
+    name: Build and Push
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Checkout
+      - name: Checkout source
         uses: actions/checkout@v3
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: adreasnow/python-test:latest
+          tags: |
+            adreasnow/python-test:latest
+            adreasnow/python-test:${{ github.sha }}
+
+  deploy:
+    name: Deploy
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set the Kubernetes context
+        uses: azure/k8s-set-context@v2
+        with:
+          method: service-account
+          k8s-url: https://23195712-03b8-4ab1-b7d6-d5480f8cfcc1.ap-southeast-1.linodelke.net:443
+          k8s-secret: ${{ secrets.KUBERNETES_SECRET }}
+      - name: Checkout source
+        uses: actions/checkout@v3
+
+      - name: Deploy
+        uses: azure/k8s-deploy@v1
+        with:
+          namespace: default
+          manifests: |
+            kubernetes/python-test-deployment.yaml
+            kubernetes/python-test-service.yaml
+          images: |
+            adreasnow/python-test:${{ github.sha }}
