--- a/.github/workflows/docker-build-publish.yaml
+++ b/.github/workflows/docker-build-publish.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Build and Push
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
