--- a/kubernetes/python-test-deployment.yaml
+++ b/kubernetes/python-test-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: play-deployment
+  name: play # This is the app name
   labels:
     app: play
 spec:
