--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,12 @@
 services:
   app:
-    build: .
+    build: module-app/
     container_name: app
     command: python3 test_module
     ports:
-      - 1000:1000
+      - 80:80
     volumes:
       - .:/app
     environment:
       FLASK_HOST: 0.0.0.0
-      FLASK_PORT: 1000
+      FLASK_PORT: 80
