--- a/.github/workflows/docker-build-publish.yaml
+++ b/.github/workflows/docker-build-publish.yaml
@@ -20,13 +20,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          pip install -r requirements.txt
+          pip install -r module-app/requirements.txt
       - name: Test with Pytest
         run: |
           pytest module-app/tests.py
 
   build:
     name: Build
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
