--- a/.github/workflows/docker-build-publish.yaml
+++ b/.github/workflows/docker-build-publish.yaml
@@ -6,33 +6,52 @@ on:
       - 'main'
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    name: Test
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          pip install -r module-app/requirements.txt
-      - name: Test with Pytest
-        run: |
-          pytest module-app/tests.py
-
+#   test:
+#     runs-on: ubuntu-latest
+#     name: Tests
+#     steps:
+#       - name: Checkout source
+#         uses: actions/checkout@v3
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: 3.11
+#       - name: Install Dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install pytest
+#           pip install -r module-app/requirements.txt
+#       - name: Test app with Pytest
+#         run: |
+#           pytest module-app/tests.py
   build:
     name: Build
-    needs: [test]
+    # needs: [test]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [ '1.21.x' ]
     steps:
       - name: Checkout source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+      - name: Setup Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Install go deps
+        run: |
+          go mod init main
+          go get github.com/gin-gonic/gin
+          go get github.com/jmoiron/sqlx
+          go get github.com/lib/pq
+      - name: Build
+        run: go build -v module-app/main.go
 
+  package:
+    name: Package
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
@@ -44,35 +63,45 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
+
+      - name: Package and push app
         uses: docker/build-push-action@v4
         with:
           context: module-app/
           push: true
           tags: |
-            adreasnow/python-test-app:latest
-            adreasnow/python-test-app:${{ github.sha }}
+            adreasnow/go-test-app:latest
+            adreasnow/go-test-app:${{ github.sha }}
 
-  deploy:
-    name: Deploy
-    needs: [build]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set the Kubernetes context
-        uses: azure/k8s-set-context@v2
+      - name: Package and push adb
+        uses: docker/build-push-action@v4
         with:
-          method: kubeconfig
-          kubeconfig: ${{ secrets.KUBERNETES_KUBECONFIG }}
+          context: module-db/
+          push: true
+          tags: |
+            adreasnow/go-test-db:latest
+            adreasnow/go-test-db:${{ github.sha }}
+
+#   deploy:
+#     name: Deploy
+#     needs: [package]
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Set the Kubernetes context
+#         uses: azure/k8s-set-context@v2
+#         with:
+#           method: kubeconfig
+#           kubeconfig: ${{ secrets.KUBERNETES_KUBECONFIG }}
   
-      - name: Checkout source
-        uses: actions/checkout@v3
+#       - name: Checkout source
+#         uses: actions/checkout@v3
 
-      - name: Deploy
-        uses: azure/k8s-deploy@v1
-        with:
-          namespace: default
-          manifests: |
-            kubernetes/app-deployment.yaml
-            kubernetes/service.yaml
-          images: |
-            adreasnow/python-test-app:${{ github.sha }}
+#       - name: Deploy
+#         uses: azure/k8s-deploy@v1
+#         with:
+#           namespace: default
+#           manifests: |
+#             kubernetes/app-deployment.yaml
+#             kubernetes/service.yaml
+#           images: |
+#             adreasnow/python-test-app:${{ github.sha }}
